# scribe

./: .gitignore  README.md  pyproject.toml
src/scribe/: __init__.py  cli.py  config.py  constants.py  exceptions.py  repo.py  wallet.py
src/scribe/contracts/: deploy.py  exceptions.py  info.py  loader.py  output.py
src/scribe/deployment/: exceptions.py  tag.py
tests/: conftest.py  test_wallet.py
